[package]
name = "switcheroo-nx"
version = "0.5.0"
edition = "2021"
authors = ["Ethan Budd <budde25@protonmail.com>"]
description = "A cross platform CLI and GUI for the Nintendo Switch RCM exploit"
keywords = ["CLI", "utilities", "RCM"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "GPL-2.0-or-later"
repository = "https://github.com/budde25/switcheroo"
homepage = "https://github.com/budde25/switcheroo"

[[bin]]
name = "switcheroo"
path = "src/main.rs"

[workspace]
members = ["crates/tegra-rcm"]

[workspace.dependencies]
clap = { version = "4.3.10", features = [ "derive" ] }
log = "0.4.19"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.69.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# The installers to generate for each app
installers = ["shell", "powershell"]

[dependencies]
camino = "1.1.4"
clap = { workspace = true }
clap-verbosity-flag = "2.0.1"
color-eyre = "0.6.2"
console = "0.15.7"
dirs = "5.0.1"
eframe = { version = "0.22.0", optional = true }
egui-notify = { version = "0.7.0", optional = true }
egui_extras = { version = "0.22.0", features = [ "svg" ], optional = true }
image = { version = "0.24.6", optional = true }
indicatif = "0.17.5"
log = { workspace = true }
notify = { version = "6.0.1", optional = true }
once_cell = "1.18.0"
rfd = { version = "0.11.4", optional = true, default-features = false, features = [ "xdg-portal" ] }
tegra-rcm = { version = "0.5.0", path = "crates/tegra-rcm" }
thiserror = "1.0.43"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }

[build-dependencies]
clap = { workspace = true }
clap-verbosity-flag = "2.0.1"
clap_complete = "4.3.1"
clap_mangen = "0.2.12"
camino = "1.1.4"

[features]
default = ["gui"]
gui = ["dep:egui_extras", "dep:eframe", "dep:rfd", "dep:notify", "dep:image", "dep:egui-notify"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.deb]
depends = "$auto"
section = "utility"
assets = [
    [ "target/release/switcheroo", "usr/bin/", "755" ],
    [ "LICENSE", "usr/share/doc/switcheroo/", "644" ],
    [ "README.md", "usr/share/doc/switcheroo/README", "644" ],
    # desktop file
    [ "extra/linux/io.ebudd.Switcheroo.desktop", "usr/share/applications/", "644" ],
    # icon
    [ "extra/logo/io.ebudd.Switcheroo.png", "/usr/share/icons/hicolor/512x512/apps/", "644" ],
    [ "extra/logo/io.ebudd.Switcheroo.png", "/usr/share/pixmaps/", "644" ],
    # meta info
    [ "extra/linux/io.ebudd.Switcheroo.appdata.xml", "/usr/share/metainfo/", "644" ],
    # udev rules
    [ "extra/linux/99-switch.rules", "/lib/udev/rules.d/", "644" ],
    # TODO: Consider not committing shell completions/man files, and generating them on demand during CI
    # shell completions
    [ "extra/completions/switcheroo.bash", "usr/share/bash-completion/completions/switcheroo", "644" ],
    [ "extra/completions/switcheroo.fish", "usr/share/fish/vendor_completions.d/switcheroo.fish", "644" ],
    [ "extra/completions/_switcheroo", "usr/share/zsh/vendor-completions/_switcheroo", "644" ],
    # man file
    [ "extra/man/switcheroo.1", "usr/share/man/man1/switcheroo.1", "644" ],
]

