[package]
keywords = ["exploit", "cross-platform"]
name = "tegra-rcm"
version = "0.2.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = ["Ethan Budd <budde25@protonmail.com>"]
description = "A library to help exploit the bootROM exploit for the Tegra X1's RCM mode"
repository = "https://github.com/budde25/switcheroo/tree/main/crates/tegra-rcm"
readme = "README.md"
categories = ["os", "hardware-support"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
tracing = "0.1.35"

# Linux and Mac specific
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
rusb = "0.9.1"

# Linux specific
[target.'cfg(target_os = "linux")'.dependencies]
glob = "0.3.0"
nix = "0.24.1"

# Windows specific
[target.'cfg(target_os = "windows")'.dependencies]
libusbk = { version = "0.1.1", features = ["vendored"] }
winapi = { version = "0.3.9", features = ["ioapiset", "errhandlingapi"] }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "my_benchmark"
harness = false
